Fix community's page sidebar on mobile

--- a/documentation/website/source/_themes/opendylan/static/opendylan.org/css/opendylan.css
+++ b/documentation/website/source/_themes/opendylan/static/opendylan.org/css/opendylan.css
@@ -64,6 +64,9 @@ a.headerlink {
   body {
     padding-top: 0;
   }
+  .bs-docs-sidebar .affix {
+    position: relative;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 980px) {
